[tool.poetry]
name = "batsim"
version = "0.1.0"
description = ""
authors = ["Ameys Marc <marcameys@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
jupyterlab = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
